Fix overflow problem on "resto card"

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,7 +419,7 @@ a {
   display: flex;
   flex-direction: column;
   margin: 3%;
-  max-width: 80%;
+  max-width: 75%;
   min-width: 0;
   transition: 0.7s;
 }
@@ -441,9 +441,11 @@ a {
 }
 .menus__card--price {
   position: absolute;
-  bottom: 5px;
-  right: 5px;
+  bottom: 13px;
+  right: 25px;
   transition: 0.7s;
+  font-weight: 700;
+  font-size: 18px;
 }
 .menus__card--checkbox {
   background-color: #99E2D0;
@@ -469,8 +471,11 @@ a {
 .menus__card:hover .menus__card--checkbox {
   margin-right: 0;
 }
-.menus__card:hover .menus__card--price, .menus__card .menus__card--text {
+.menus__card:hover .menus__card--price {
   margin-right: 16%;
+}
+.menus__card:hover .menus__card--text {
+  margin-right: 20%;
 }
 .menus__card:hover .menus__card--checkbox i {
   display: flex;
