--- a/sass/layout/_menus.scss
+++ b/sass/layout/_menus.scss
@@ -74,7 +74,7 @@
       display: flex;
       flex-direction: column;
       margin: 3%;
-      max-width: 80%;
+      max-width: 75%;
       min-width: 0;
       transition: 0.7s;
       & h4{
@@ -96,9 +96,11 @@
     }
     &--price{
       position: absolute;
-      bottom: 5px;
-      right: 5px;
+      bottom: 13px;
+      right: 25px;
       transition: 0.7s;
+      font-weight: 700;
+      font-size: 18px;
     }
     &--checkbox{
       background-color: $tertiary-color;
@@ -125,8 +127,11 @@
     &:hover &--checkbox{
       margin-right: 0;
     }
-    &:hover .menus__card--price, .menus__card--text{
+    &:hover .menus__card--price{
       margin-right: 16%;
+    }
+    &:hover .menus__card--text{
+      margin-right: 20%;
     }
     &:hover &--checkbox i{
       display: flex;
